# Layout_Auto_Generation_MLLM

./: README.md  pyproject.toml
convertHTML/: .___init__.py  ._build_code_crello_v6.5.py  ._build_code_crello_v6.7.py  ._build_code_miridih_v4.py  ._build_code_v6.6.py  ._build_code_v6.6_test.py  ._miridih.py  __init__.py  build_code_crello.py  build_code_crello_v4.py  build_code_crello_v5.py  build_code_crello_v6.5.py  build_code_crello_v6.6.py  build_code_crello_v6.7.py  build_code_crello_v6.py  build_code_miridih.py  build_code_miridih_v4.py  build_code_v6.6.py  build_code_v6.6_test.py  crello.py  extract_element_features.py  miridih.py
data/: ._get_promptv5-6.py  ._get_promptv5-6_test.py  ._get_promptv6.7_crello.py  get_prompt_v1.5.py  get_prompt_v1.py  get_promptv2.py  get_promptv3.py  get_promptv3_crello.py  get_promptv4.py  get_promptv4_crello.py  get_promptv5-6.py  get_promptv5-6_crello.py  get_promptv5-6_test.py  get_promptv5_crello.py  get_promptv6.5_crello.py  get_promptv6.6_crello.py  get_promptv6.7_crello.py
helper/: ._global_var.py  get_prompt_v1.py  global_var.py
llava/: mm_utils.py  utils.py
llava/data/: __init__.py  lazyRealtimeRender.py
llava/eval/: model_qa.py  model_vqa_loader.py  model_vqa_mmbench.py  model_vqa_science.py  run_llava.py
llava/model/: apply_delta.py  llava_arch.py  make_delta.py
llava/serve/: cli_multi.py  controller.py  (+2 more)
miridih_llava/: ._conversation.py  constants.py  conversation.py  utils.py
posterllava.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: zero3_offload.json  zero3_offload_v5.json
(+64 files in other folders)
